Add 3 standalone demo pages with URL sharing and Kivy mode
- Created SwiftToPythonDemo, PythonToSwiftDemo, and PyDataModelDemo executables
- Each demo has its own page with Monaco editor integration
- Added URL sharing with LZ-String compression
- PyDataModelDemo includes optional Kivy mode with 3-column layout
- Updated build script to handle all 4 targets
- Updated mkdocs plugin to serve all demo directories

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,4 +15,8 @@ markdown_extensions:
 
 nav:
   - Home: index.md
-  - Demo: demo.md
+  - Interactive Demos:
+    - Multi-Tool Demo: demo.md
+    - Swift to Python: swift-to-python.md
+    - Python to Swift: python-to-swift.md
+    - Python DataModel: python-datamodel.md
