Add KvAstTree demo - SwiftyKvLang parser with AST visualization

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,3 +20,4 @@ nav:
     - Swift to Python: swift-to-python.md
     - Python to Swift: python-to-swift.md
     - Python DataModel: python-datamodel.md
+    - KV AST Tree: kv-ast-tree.md
