--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,3 +23,4 @@ nav:
     - KV AST Tree: kv-ast-tree.md
     - KV to SwiftUI: kv-swiftui.md
     - KV to DataModel: kv-datamodel.md
+    - KV to Python Classes: kv-to-pyclass.md
