Add KvToPyClassVsCode extension: VSCode extension for KV language support
- Added KV language syntax highlighting and grammar
- Implemented WASM-based KV parser and code generator
- Added language features: completions, diagnostics, hover, symbols
- Created sidebar views: KV Files and KV Widgets with drag-and-drop
- Integrated color picker for KV color values
- Added paired file management (KV <-> Python)
- Included live preview panel with AST visualization
- Updated WASM builds for all demo projects

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,10 @@ dependencies = [
 [tool.setuptools.packages.find]
 include = ["mkdocs_plugin*"]
 
+[tool.uv.workspace]
+members = [
+    "KvLangTester",
+]
+
 [project.entry-points."mkdocs.plugins"]
 pyswiftkit_demo = "mkdocs_plugin:PySwiftKitPlugin"
